IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/21/08: In Imodfindbeads, fixed black level in file when dip is below minimum.

6/21/08: Added option to Beadtrack to get information about which surface
each bead is on.

6/20/08: IMOD_3-12-12
6/20/08: In Etomo added tilt angles to 3dmod calls which display tilt series.

6/20/08: Fixed a bug in Etomo - NAD where the test K value list would only
accept whole numbers.

6/19/08: Added filterplot for plotting IMOD filter functions.

6/19/08: Added imodfindbeads for detecting gold particles in images.

6/19/08: Fixed imodinfo to give extra verbose output with -vv as advertised.

6/17/08: Implemented three ways to change diameter of a tube mesh within a 
contour, available from both Imodmesh and 3dmod.

6/17/08: Added centroid calculation to integrals in Nda and Mtk.

6/17/08: When inserting fine-grained changes, no longer wipe out later
matching changes inserted by the users.

6/12/08: Made scale bar and light vector display come out on top of models.

6/10/08: IMOD_3-12-11
6/10/08: Fixed some problems with lighting direction with multiple models, and
added a vector display of light direction while moving the light.

6/8/08: Added ability to fit a cylinder instead of a sphere to Imodcurvature,
using a stupid exhaustive angular search; also fixed bug in 3D fitting when
the points are spaced apart farther than half the window length.  Made value
output in model be scaled from pixels into user's units, and added option to
get curvature values rather than radius of curvature values.

5/31/08: Added general values and point sizes to ascii model output.

5/30/08: Rewrote mrcbyte and imodauto to read data slice by slice instead of
reading the whole file into memory.

5/30/08: Added option to Boxstartend to specify a size in X, Y, and Z, so 
square boxes are no longer required; fixed centering in Z so that the option
to set slices before and after actually works.
