@@ -6,6 +6,8 @@ They are declared in cfsemshare.h.
 <P>
 <H3 style="color: rgb(0,128,0);">Functions for Tapering and Padding Images</H3>
 LIST FUNCTIONS FROM taperpad.c
+<H3 style="color: rgb(0,128,0);">Functions for Tapering an Image at Fill Areas</H3>
+LIST FUNCTIONS FROM taperatfill.c
 <H3 style="color: rgb(0,128,0);">Functions for Fourier Correlation and Filtering</H3>
 LIST FUNCTIONS FROM filtxcorr.c
 <H3 style="color: rgb(0,128,0);">Functions for Fitting Circles and Spheres</H3>
@@ -30,6 +32,8 @@ LIST CODE FROM colormap.c COLORRAMP
 <P>
 <H3 style="color: rgb(0,128,0);">Functions for Tapering and Padding Images</H3>
 DESCRIBE FUNCTIONS FROM taperpad.c
+<H3 style="color: rgb(0,128,0);">Functions for Tapering an Image at Fill Areas</H3>
+DESCRIBE FUNCTIONS FROM taperatfill.c
 <H3 style="color: rgb(0,128,0);">Functions for Fourier Correlation and Filtering</H3>
 DESCRIBE FUNCTIONS FROM filtxcorr.c
 <H3 style="color: rgb(0,128,0);">Functions for Fitting Circles and Spheres</H3>
