@@ -3,195 +3,209 @@
 LIBRARY      "libcfshr"
 
 EXPORTS
-	SETCTFWSR
-	AdocSetCurrent
-	PipGetLineOfValues
-	AdocGetTwoFloats
-	cmapReadConvert
-	parselist
-	ADOCSETINTEGER
-	ilistPop
-	ADOCGETTHREEFLOATS
-	cubinterp
-	MEANZERO
-	ADOCGETTWOINTEGERS
-	TAPERINPAD
-	ADOCGETSTRING
-	sliceTaperOutPad
-	ADOCGETINTEGERARRAY
-	PipGetInteger
-	ADOCSETKEYVALUE
-	f2cString
-	sliceTaperInPad
-	PipAllowCommaDefaults
-	ilistNext
-	PIPGETTHREEFLOATS
-	PIPGETNONOPTIONARG
-	mrcHugeSeek
 	ilistInsert
-	AdocGetThreeFloats
-	ilistRemove
-	PIPNEXTARG
-	AdocSetKeyValue
-	PIPREADOPTIONFILE
-	amoeba
+	ADOCGETINTEGER
 	PIPDONE
-	IMODBACKUPFILE
-	PipSetManpageOutput
+	b3dRewind
+	c2fString
+	SETCTFWSR
+	PIPGETTHREEINTEGERS
+	InsideContour
 	ADOCGETNUMBEROFSECTIONS
+	MEANZERO
+	b3dFseek
+	PIPREADOPTIONFILE
+	IMODBACKUPFILE
+	PipGetIntegerArray
+	ADOCGETFLOATARRAY
+	PIPGETTHREEFLOATS
+	sliceInit
+	sampleMeanSD
+	PipGetString
+	ilistDelete
 	AdocDeleteKeyValue
-	PipStartsWith
-	b3dError
-	imodCopyright
+	CUBINTERP
 	PIPGETTWOINTEGERS
-	PIPGETERROR
-	b3dHeaderItemBytes
-	imodBackupFile
-	AdocGetString
+	PipPrintHelp
+	amoeba
+	sliceClear
+	PipReadStdinIfSet
+	AdocSetKeyValue
+	ilistShift
+	TAPERATFILL
+	AdocSetThreeIntegers
+	sliceGetValMagnitude
+	ADOCGETTWOFLOATS
+	ilistPush
+	AdocRead
+	setExitPrefix
+	sliceEdgeMean
+	AMOEBAINIT
+	mrc_big_seek
+	PipGetFloatArray
+	AMOEBA
+	ADOCSETTHREEFLOATS
+	sliceTaperOutPad
+	TAPEROUTPAD
+	sliceFree
+	PipExitOnError
+	ADOCSETTHREEINTEGERS
+	ADOCSETINTEGER
+	ADOCSETTWOINTEGERS
+	PIPNEXTARG
+	PipGetThreeIntegers
+	PipNumberOfArgs
+	fitSphere
 	XCORRPEAKFIND
-	PIPNUMBEROFARGS
-	AdocGetThreeIntegers
-	B3DHEADERITEMBYTES
-	ilistFloat
-	PIPGETFLOATARRAY
+	cubinterp
+	ADOCSETFLOAT
+	REDUCE_BY_BINNING
 	PipAddOption
-	ilistTruncate
-	PipParseInput
-	ADOCGETTHREEINTEGERS
-	b3dGetError
-	XCorrSetCTFnoScl
+	PIPADDOPTION
+	ilistSize
+	PARABOLICFITPOSITION
+	exitError
+	PipGetInteger
+	PipNumberOfEntries
+	AdocGetIntegerArray
+	ilistAppend
+	AdocAddSection
+	ADOCSETCURRENT
+	AdocWrite
+	ADOCGETSECTIONNAME
+	imodVersion
+	b3dError
+	PIPNUMBEROFARGS
+	PIPGETINTEGERARRAY
+	AdocSetThreeFloats
+	ilistDup
+	parabolicFitPosition
+	ADOCSETKEYVALUE
+	ilistItem
+	ADOCGETINTEGERARRAY
+	AdocGetInteger
+	imodBackupFile
+	cmapReadConvert
+	PIPNUMBEROFENTRIES
+	SLICEEDGEMEAN
+	sliceMode
+	ADOCREAD
+	ADOCNEW
+	PipMemoryError
+	b3dFwrite
+	ilistFloat
 	FILTERPART
-	AdocNew
-	PIPGETTWOFLOATS
+	AdocSetCurrent
+	PIPGETBOOLEAN
+	PipSetSpecialFlags
+	ADOCGETTHREEINTEGERS
+	PipParseEntries
+	PipGetLineOfValues
+	mrcHugeSeek
+	PipGetFloat
+	PipReadOrParseOptions
+	AdocSetFloat
+	AdocSetInteger
+	b3dIMax
 	PIPALLOWCOMMADEFAULTS
 	ilistSwap
-	ilistPush
-	ADOCDELETEKEYVALUE
-	PIPINITIALIZE
-	sampleMeanSD
-	AdocWrite
-	ADOCDONE
-	INSIDECONTOUR
-	ilistAppend
-	AMOEBA
-	AdocGetFloatArray
-	ADOCWRITE
-	b3dSetStoreError
-	ADOCGETFLOATARRAY
-	PipDone
-	cmapConvertRamp
-	reduceByBinning
-	ADOCSETTHREEINTEGERS
-	AdocGetTwoIntegers
-	ADOCGETINTEGER
-	imodProgName
-	ADOCGETFLOAT
-	ADOCGETSECTIONNAME
-	PipReadOptionFile
-	setExitPrefix
-	SLICEEDGEMEAN
-	AdocSetThreeIntegers
-	AdocSetTwoIntegers
-	PipNumberOfEntries
-	PipGetThreeIntegers
+	ADOCGETSTRING
+	slicePutVal
+	ilistTruncate
 	PIPGETINTEGER
-	ADOCADDSECTION
-	AdocRead
-	PipGetError
-	sliceEdgeMean
-	b3dFwrite
-	PIPSETERROR
-	exitError
-	AdocSetFloat
-	c2fString
-	PipExitOnError
-	PipInitialize
-	PipNumberOfArgs
-	cmapInvertedRamp
-	PipMemoryError
-	ADOCSETTHREEFLOATS
-	PIPPRINTHELP
-	PipGetFloat
-	PipSetError
-	SETCTFNOSCL
-	amoebaInit
-	PipGetIntegerArray
-	AdocGetSectionName
-	PIPGETTHREEINTEGERS
-	XCorrPeakFind
-	conjugateProduct
-	fitSphere
-	PipGetTwoIntegers
-	ADOCSETTWOFLOATS
-	PIPADDOPTION
-	AMOEBAINIT
-	ilistFirst
-	circleThrough3Pts
-	ilistLast
-	TAPEROUTPAD
-	PipGetTwoFloats
-	PIPREADSTDINIFSET
-	PipParseEntries
-	AdocSetThreeFloats
-	PipReadStdinIfSet
-	CUBINTERP
-	ilistShift
-	XCorrFilterPart
-	PipNextArg
-	SCALEDSOBEL
-	ilistSize
-	b3dFread
-	XCorrSetCTF
-	PIPNUMBEROFENTRIES
-	PipGetBoolean
-	PIPGETSTRING
-	PIPSETSPECIALFLAGS
-	b3dIMax
-	ilistItem
-	AdocDone
-	parabolicFitPosition
-	PIPGETBOOLEAN
-	PipReadOrParseOptions
-	PIPGETINTEGERARRAY
-	PIPSETMANPAGEOUTPUT
-	PipGetString
-	AdocGetNumberOfSections
-	cmapStandardRamp
-	PipGetThreeFloats
-	PipReadNextLine
-	b3dIMin
-	mrc_big_seek
-	ilistDelete
-	PipSetSpecialFlags
-	scaledSobel
-	b3dRewind
-	IMODGETENV
-	ilistNew
-	imodUsageHeader
-	fgetline
-	PipGetFloatArray
-	PIPEXITONERROR
-	AdocAddSection
-	ADOCSETTWOINTEGERS
-	ilistQuantum
-	REDUCE_BY_BINNING
-	AdocSetTwoFloats
-	ADOCREAD
-	ilistDup
-	XCorrMeanZero
-	InsideContour
-	AdocGetFloat
-	PARABOLICFITPOSITION
-	ADOCNEW
-	b3dFseek
-	imodVersion
-	AdocSetInteger
-	ADOCSETCURRENT
-	ADOCGETTWOFLOATS
-	AdocGetInteger
-	ADOCSETFLOAT
-	PIPGETFLOAT
-	PipGetInOutFile
-	PipPrintHelp
-	AdocGetIntegerArray
 	PipGetNonOptionArg
+	PipGetTwoIntegers
+	sliceTaperAtFill
+	PIPREADSTDINIFSET
+	AdocGetTwoIntegers
+	cmapConvertRamp
+	conjugateProduct
+	SETCTFNOSCL
+	PIPGETTWOFLOATS
+	PipAllowCommaDefaults
+	AdocGetTwoFloats
+	cmapStandardRamp
+	ilistRemove
+	sliceTaperInPad
+	PipSetManpageOutput
+	PipGetThreeFloats
+	PIPGETNONOPTIONARG
+	AdocGetThreeFloats
+	INSIDECONTOUR
+	scaledSobel
+	PIPGETSTRING
+	PipReadOptionFile
+	AdocNew
+	b3dSetStoreError
+	PIPSETSPECIALFLAGS
+	ilistPop
+	PIPSETMANPAGEOUTPUT
+	AdocSetTwoFloats
+	parselist
+	sliceGetVal
+	AdocGetFloat
+	circleThrough3Pts
+	PipGetInOutFile
+	ADOCSETTWOFLOATS
+	cmapInvertedRamp
+	AdocDone
+	PipDone
+	ADOCWRITE
+	PIPSETERROR
+	ilistFirst
+	sliceGetYSize
+	PipStartsWith
+	ilistNext
+	IMODGETENV
+	ADOCGETFLOAT
+	PIPPRINTHELP
+	PIPINITIALIZE
+	AdocGetString
+	XCorrPeakFind
+	b3dIMin
+	imodCopyright
+	AdocGetNumberOfSections
+	b3dGetError
+	XCorrSetCTFnoScl
+	reduceByBinning
+	PipSetError
+	sliceCreate
+	XCorrSetCTF
+	XCorrFilterPart
+	sliceModeIfReal
+	PipParseInput
+	PIPGETERROR
+	AdocSetTwoIntegers
+	ADOCGETTHREEFLOATS
+	ilistQuantum
+	sliceGetXSize
+	PIPGETFLOATARRAY
+	PipGetBoolean
+	ADOCGETTWOINTEGERS
+	PipGetTwoFloats
+	PIPEXITONERROR
+	PipNextArg
+	amoebaInit
+	PipReadNextLine
+	PIPGETFLOAT
+	ADOCADDSECTION
+	b3dHeaderItemBytes
+	fgetline
+	AdocGetSectionName
+	B3DHEADERITEMBYTES
+	XCorrMeanZero
+	sliceGetPixelMagnitude
+	AdocGetFloatArray
+	SCALEDSOBEL
+	b3dFread
+	imodUsageHeader
+	ADOCDELETEKEYVALUE
+	ilistLast
+	TAPERINPAD
+	ilistNew
+	f2cString
+	imodProgName
+	ADOCDONE
+	AdocGetThreeIntegers
+	PipInitialize
+	PipGetError
